# fastgeoip-server

./: .gitignore  README.md  main.py  pyproject.toml  sample.env
config/: fastgeoip-server.service  fastgeoip-server.socket  fastgeoip.service  fastgeoip.socket  logging.py
db/: update.sh
src/: app.py
